# shared-spaces-server-spike

./: .env  .env.development  .env.production  .env.test  .gitignore  .npmrc  Cargo.toml  Procfile  package-lock.json  package.json  readme.md
cypress/integration/: authorization_spec.js  login_spec.js  password_spec.js  registration_spec.js
fixtures/: close-connections.sql  seed-database.sql
migrations/2020-03-29-144810_create_user/: up.sql
migrations/2020-04-23-013528_reset_password/: up.sql
migrations/2020-04-27-182312_user_confirmation/: up.sql
src/: main.rs  schema.rs
src/controllers/: app_controller.rs  authenticated_discovery_server_controller.rs  mod.rs  password_controller.rs  registration_controller.rs  root_controller.rs  session_controller.rs  user_controller.rs
src/factories/: date_factory.rs  mod.rs  url_factory.rs  validation_factory.rs
src/models/: mod.rs  user.rs
src/pages/: handlebar_helpers.rs  layout_page.hbs  mod.rs  test.hbs
src/pages/app/: index.hbs
src/pages/password/: change.hbs  reset-expired.hbs  reset.hbs
src/pages/registration/: confirmation-create.hbs  confirmation-expired.hbs  confirmation-please.hbs  confirmation-sent.hbs  confirmation-success.hbs  create.hbs
src/pages/root/: index.hbs
src/pages/session/: create.hbs
src/pages/user/: details.hbs  edit.hbs
src/services/: database.rs  email_service.rs  mod.rs  user_service.rs
src/traits/: from_request.rs  mod.rs
src/web_sockets/: authenticated_discovery_server.rs  mod.rs
static/: hello.html  webrtc-adapter.js
