[package]
name = "shared-spaces-server"
version = "0.1.0"
authors = ["Logan Keenan <d.logankeenan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html]
[dependencies]
actix-web = "2"
actix-rt = "1"
actix-identity = "0.2.1"
actix-files = "0.2.2"
handlebars = {version= "3.0.1", features= ["dir_source"]}
serde_json = "1.0.39"
uuid = { version = "0.7", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.0.0", features = ["postgres", "chrono", "r2d2", "uuidv07"] }
dotenv = "0.9.0"
chrono = { version = "0.4", features = ["serde"] }
serde_derive = "1.0"
listenfd = "0.3"
argon2rs = "0.2"
rand = "0.7"
mailgun_v3 = "0.9.0"
url = "2.1.1"
validator = "0.10"
validator_derive = "0.10"
env_logger = "0.7.1"
futures = "0.3.5"
titlecase = "1.1.0"
chrono-tz = "0.5.1"
serde_qs = "0.5"
percent-encoding = "2.1.0"